# fuzzyfold

./: .gitignore  Cargo.toml  README.md
bash_benchmarking/: cotr_benchmark.sh  fold_vs_cofold.sh  plot_single_runtimes.py  simulate_benchmark.sh
crates/ff_domainlevel/: Cargo.toml
crates/ff_domainlevel/benches/: dlfolding.rs
crates/ff_domainlevel/src/: acfps.rs  complex.rs  complexregistry.rs  dlfolding.rs  enumeration.rs  lib.rs  pair_list.rs  pair_set.rs  segments.rs
crates/ff_domainlevel/src/checks/: dlfolding.rs  partial_order.rs
crates/ff_domainlevel/src/design/: acfps.rs  apply_move.rs  cycledetection.rs  mod.rs  partial_order.rs  segments.rs
crates/ff_domainlevel/src/representations/: complex.rs  complexregistry.rs  domain.rs  error.rs  mod.rs  reactions.rs  strand.rs
crates/ff_domainlevel/src/rules/: r11.rs  r12.rs  r21.rs  r22.rs  r23.rs  r24.rs  r25.rs  r26.rs  r27.rs  r28.rs  ruletrait.rs
crates/ff_energy/: CHANGELOG.md  Cargo.toml
crates/ff_energy/benches/: energy_models.rs
crates/ff_energy/params/: README.md  dna_mathews1999.par  dna_mathews2004.par  rna_turner1999.par  rna_turner2004_ext.par
crates/ff_energy/src/: energy_model.rs  lib.rs  nucleotides.rs
crates/ff_energy/src/loop_decomposition/: loop_decomposition_trait.rs  nearest_neighbor_loop.rs
crates/ff_energy/src/nn_models/: viennarna.rs
crates/ff_energy/src/nn_parsing/: energy_tables.rs  parameter_parsing.rs
crates/ff_energy/src/parameters/: energyparam.rs  mod.rs  parameterset.rs  rescale.rs
crates/ff_energy/src/parameters/dna_mathews_2004/: mathews2004_dangles.rs  mathews2004_int11.rs  mathews2004_int21.rs  mathews2004_int22.rs  mathews2004_loops.rs  mathews2004_mimas.rs  mathews2004_stacks.rs  mod.rs  params.rs
crates/ff_energy/src/parameters/rna/: extended_hairpins.rs  extended_mimas.rs  extended_stacks.rs  params.rs
crates/ff_energy/src/parameters/rna_andronescu_2007/: andronescu2007_dangles.rs  andronescu2007_hairpins.rs  andronescu2007_int11.rs  andronescu2007_int21.rs  andronescu2007_int22.rs  andronescu2007_loops.rs  andronescu2007_mimas.rs  andronescu2007_stacks.rs  mod.rs  params.rs
crates/ff_energy/src/parameters/rna_turner_2004/: params.rs  turner2004_hairpins.rs  turner2004_int21.rs  turner2004_loops.rs  turner2004_mimas.rs  turner2004_stacks.rs
crates/ff_energy/src/parameters/rna_various/: extended_stacks.rs  mod.rs  params.rs
crates/ff_energy/src/parameters/turner2004/: mod.rs  params.rs  turner2004_dangles.rs  turner2004_hairpins.rs  turner2004_int11.rs  turner2004_int22.rs  turner2004_loops.rs  turner2004_stacks.rs
crates/ff_kinetics/: CHANGELOG.md  Cargo.toml
crates/ff_kinetics/benches/: explore.rs  macrostates.rs  stochastic_simulation.rs
crates/ff_kinetics/benches/data/: benchmark_macrostates_len100.ms  benchmark_macrostates_len1000.ms  benchmark_macrostates_len250.ms  benchmark_macrostates_len50.ms  benchmark_macrostates_len500.ms  benchmark_macrostates_len750.ms
crates/ff_kinetics/src/: base_pair_moves.rs  enum_neighbors.rs  explore.rs  lib.rs  loop_structure.rs  macrostates.rs  macrostates_pairlists.rs  macrostates_pairsets.rs  macrostates_pl.rs  movesets.rs  rate_model.rs  rate_tree.rs  reaction.rs  stochastic_simulation.rs  timeline.rs  timeline_editing.rs  timeline_io.rs  timeline_io_pairlists.rs  timeline_io_pairsets.rs  timeline_io_pl.rs  timeline_pairlists.rs  timeline_pairsets.rs  timeline_pl.rs  timeline_plotting.rs  timeline_plotting_pairlists.rs  timeline_plotting_pairsets.rs  timeline_plotting_pl.rs  walker.rs
crates/ff_kinetics/src/movesets/: add_del_moves.rs  add_del_shift_moves.rs  base_pair_moves.rs  four_way_shifts.rs  loop_neighbors.rs  loop_table.rs  mod.rs  shift_policy.rs  three_way_shifts.rs  walker.rs
crates/ff_python/: Cargo.toml  README.md  example.py
crates/ff_python/examples/: example.py
crates/ff_python/src/: energy_exports.rs  kinetics_exports.rs  lib.rs
crates/ff_structure/: CHANGELOG.md  Cargo.toml
crates/fuzzyfold/: CHANGELOG.md  Cargo.toml
examples/ff-explore/: README.md  dld1_lm3.na  dld3_lm3.fa
examples/ff-locmin/: README.md
(+68 files in other folders)
