[package]
name = "ff_energy"
version = "0.3.0"
description = "fuzzyfold's nearest neighbor free energy evaluations."
documentation = "https://docs.rs/ff_energy"
keywords = ["dna", "rna", "secondary-structure", "nearest-neighbor"]
readme = "../../README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
ff_structure.workspace = true

colored.workspace = true
criterion.workspace = true
env_logger.workspace = true
itertools.workspace = true
rustc-hash.workspace = true
log.workspace = true

[[bench]]
name = "energy_models"
harness = false

[badges]
maintenance = { status = "actively-developed" }


