[package]
name = "ff_kinetics"
version = "0.4.1"
description = "fuzzyfold's stochastic secondary structure simulations."
documentation = "https://docs.rs/ff_kinetics"
keywords = ["dna", "rna", "secondary-structure", "kinetics", "nearest-neighbor"]
readme = "../../README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
ff_structure.workspace = true
ff_energy.workspace = true

criterion.workspace = true
log.workspace = true
nohash-hasher.workspace = true
ndarray.workspace = true
plotters.workspace = true
rand.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bench]]
name = "explore"
harness = false

[[bench]]
name = "stochastic_simulation"
harness = false


[badges]
maintenance = { status = "actively-developed" }

